--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "cosmiconfig": "^9.0.0",
     "json-to-ts": "^2.1.0",
     "lodash-es": "^4.17.21",
-    "microbundle": "^0.15.1"
+    "microbundle": "^0.15.1",
+    "pocketbase": "^0.25.0"
   },
   "microbundle": {
     "target": "node"
