--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sparkstone/pocketbase-schema",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "type": "module",
   "source": "src/main.ts",
   "exports": {
@@ -30,5 +30,13 @@
   },
   "devDependencies": {
     "@types/node": "^22.10.7"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/odama626/pocketbase-schema.git"
+  },
+  "bugs": {
+    "url": "https://github.com/odama626/pocketbase-schema/issues"
+  },
+  "homepage": "https://github.com/odama626/pocketbase-schema#readme"
 }
